# bupt-youth-learning-server

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
typings/django/: __main__.pyi  commit.txt  shortcuts.pyi
typings/django/forms/: __init__.pyi  fields.pyi  models.pyi  widgets.pyi
typings/django/http/: __init__.pyi  request.pyi  response.pyi
typings/django/template/: base.pyi  defaultfilters.pyi  library.pyi  loader.pyi
typings/django/test/: __init__.pyi  client.pyi  testcases.pyi  utils.pyi
typings/django/urls/: conf.pyi
typings/django/utils/: autoreload.pyi  decorators.pyi  encoding.pyi  functional.pyi  timezone.pyi
young_university_study/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
young_university_study/store/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
young_university_study/store/migrations/: 0001_initial.py  0002_auto_20210226_1319.py  0003_auto_20210303_1416.py  0004_commodity_is_removed.py  0005_auto_20210305_1511.py  0006_commodity_deadline.py  0007_commodity_location.py  0008_purchaserecord_updated.py  0009_auto_20210312_0324.py
young_university_study/study/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
young_university_study/study/grpc/: api_pb2.py  api_pb2_grpc.py
young_university_study/study/migrations/: 0001_initial.py  0002_studyrecording_user_id.py  0003_auto_20200824_0232.py  (+3 more)
young_university_study/user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+68 files in other folders)
